--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             font-size: 25px;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
-
+        img {
+            border-radius: 5px;
+        }
         .content {
             margin: 20px;
         }
