--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
             </a>
         </div>
         <hr>
+         <div>
+            <h1>Torrentbd <br> Smilies </h1>
+            <hr>
+            <p>Userscript that adds shoutbox emoji/smilies in forum reply/comment/mail</p>
+            <p><a href="https://github.com/Niloy-Sarker/TorrentBD-Forum-Smilies"><button>Source Code</button></a></p>
+            <a href="https://github.com/Niloy-Sarker/TorrentBD-Forum-Smilies/raw/main/torrentbd-forum-smilies.user.js">
+                <button>Install Script</button>
+            </a>
+        </div>
+        <hr>
     </div>
 
     <script>
